--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
-change usage to allow not just query of a single region but multiple regions from files or flags
+change usage to allow not just query of a single region but multiple regions from files or flags (DONE)
 
-main.R extract ...
+main.R extract ... (DONE)
+
+add more flexible plotting flag, --title
+for plotting, change smoothing to per-read smoothing, (see Scotts implementation)
 main.R overlap ...
 
 add usage of finding overlap with proteins from gtf and plotting
