--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,8 @@ for plotting, change smoothing to per-read smoothing, (DONE)
 
 write OOP manner (DONE)
 
-main.R overlap ...
+main.R overlap ... (DONE)
 
-add usage of finding overlap with proteins from gtf and plotting
+add usage of finding overlap with proteins from gtf (DONE)
+
+and plotting
